--- a/src/framework.scss
+++ b/src/framework.scss
@@ -4,12 +4,6 @@
 //visual effects -----------------------------------------
 //visual effects -----------------------------------------
 //visual effects -----------------------------------------
-.shadowS{box-shadow: 0 0 1em .05em rgba(175,175,175,.5);}
-.shadowL{box-shadow: 0 0 1.5em .1em rgba(135,135,135,.5);}
-.shadowBlurS{box-shadow: 0 0 2em .05em rgba(175,175,175,.5);}
-.shadowBlurL{box-shadow: 0 0 2.5em .2em rgba(135,135,135,.5);}
-.shadowBellow{box-shadow: 0 .3em 1em -.2em $shadowColor ;}
-.shadowPrimary{box-shadow: 0 .6em 1.7em -.5em $primaryColor ;}
 .containerStyle{
     width: 90% ;
     height: auto;
@@ -20,6 +14,91 @@
     // border-radius: $dist2 ;
     overflow: hidden;
 }
+.containerXL{ //100% width
+    width: 100%;
+    height: auto;
+    padding: $dist2;
+    margin: $sectionsDist auto 0 auto;
+    overflow: hidden;
+}
+.containerL{ //90% width
+    width: 90%;
+    height: auto;
+    padding: $dist2;
+    margin: $sectionsDist auto 0 auto;
+    overflow: hidden;
+}
+@include mediaQ(600px){.containerL{width: 95%;}}
+.containerM{ //75% width
+    width: 75%;
+    height: auto;
+    padding: $dist2;
+    margin: $sectionsDist auto 0 auto;
+    overflow: hidden;
+}
+@include mediaQ(750px){.containerM{width: 90%;}}
+@include mediaQ(500px){.containerM{width: 95%;}}
+.containerS{ //50% width
+    width: 50%;
+    height: auto;
+    padding: $dist2;
+    margin: $sectionsDist auto 0 auto;
+    overflow: hidden;
+}
+@include mediaQ(900px){.containerS{width: 75%;}}
+@include mediaQ(650px){.containerS{width: 90%;}}
+@include mediaQ(450px){.containerS{width: 95%;}}
+.containerBoxL{ //90% width
+    width: 90%;
+    height: auto;
+    padding: $dist2;
+    margin: $sectionsDist auto 0 auto;
+    border-radius: $dist2;
+    background-color: $textWhite;
+    overflow: hidden;
+}
+@include mediaQ(600px){.containerBoxL{width: 95%;}}
+.containerBoxM{ //75% width
+    width: 75%;
+    height: auto;
+    padding: $dist2;
+    margin: $sectionsDist auto 0 auto;
+    border-radius: $dist2;
+    background-color: $textWhite;
+    overflow: hidden;
+}
+@include mediaQ(750px){.containerBoxM{width: 90%;}}
+@include mediaQ(500px){.containerBoxM{width: 95%;}}
+.containerBoxS{ //50% width
+    width: 50%;
+    height: auto;
+    padding: $dist2;
+    margin: $sectionsDist auto 0 auto;
+    border-radius: $dist2;
+    background-color: $textWhite;
+    overflow: hidden;
+}
+@include mediaQ(900px){.containerBoxS{width: 75%;}}
+@include mediaQ(650px){.containerBoxS{width: 90%;}}
+@include mediaQ(450px){.containerBoxS{width: 95%;}}
+.titleL{ //font-size: $fontSpecial;
+    font-size: $fontSpecial;
+    font-weight: 700;
+    color: $primaryColor;
+}
+.titleM{ //font-size: $fontXL;
+    font-size: $fontXL;
+    font-weight: 700;
+    color: $primaryColor;
+}
+.titleS{ //font-size: $fontL;
+    font-size: $fontL;
+    font-weight: 700;
+    color: $primaryColor;
+}
+.boxShadowL{box-shadow: 0 0 2em .5em $shadowColor;}
+.boxShadowM{box-shadow: 0 0 1em .1em $shadowColor;}
+.boxShadowS{box-shadow: 0 0 .5em .05em $shadowColor;} 
 .withIcon{
     // <div class="withIcon">
     //     <i class="fas fa-building"></i>
