--- a/src/framework.scss
+++ b/src/framework.scss
@@ -104,6 +104,7 @@
 .shadowS{box-shadow: 0 0 1em 0 rgba(0,0,0,.2);} 
 .shadowBellowM{box-shadow: 0 3em 2em -2em rgba(0,0,0,.35);}
 .shadowBellowS{box-shadow: 0 1em 1em -.5em rgba(0,0,0,.4);}
+.shadow3Dir{box-shadow: 0 .5em 1em .1em rgba(0,0,0,.4);}
 .shadowMiddleM{ //bottom middle
     position: relative;
     overflow: visible;
