add full shadow

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -40,7 +40,10 @@ $purpleColor3: #6956D8 ;
 //brown color------------------------------
 $brownColor: rgb(184, 131, 45) ;
 //shadow color-----------------------------
-$shadowColor: rgba(0,0,0,.2) ;
+$shadowColor: rgba(0,0,0,.3) ;
+$shadowLight: rgba(0,0,0,.15) ; //black
+$shadowMid: rgba(0,0,0,.3) ; //black
+$shadowWhite: rgba(255,255,255,.15) ; //white
 //filters----------------------------
 $blackFilter1: rgba(30,30,30,.5) ;
 $blackFilter2: rgba(30,30,30,.65) ;
